--- a/packages/ui/menu/src/index.less
+++ b/packages/ui/menu/src/index.less
@@ -1,6 +1,8 @@
 @osui-menu-class-prefix: osui-menu;
 
-.ant-menu-vertical.ant-menu-sub, .ant-menu-vertical-left.ant-menu-sub, .ant-menu-vertical-right.ant-menu-sub {
+.ant-menu-vertical.ant-menu-sub,
+.ant-menu-vertical-left.ant-menu-sub,
+.ant-menu-vertical-right.ant-menu-sub {
     max-height: ~'calc(100vh - 100px)';
 }
 
