fix: input-number增加大中小size
Change-Id: Ifb96c778273776e90fac16258a953e2fb00fa9ec

--- a/packages/ui/input-number/src/index.less
+++ b/packages/ui/input-number/src/index.less
@@ -7,7 +7,15 @@
         transition: none;
     }
 
-    .@{ant-prefix}-input-number-input {
+    &.ant-input-number-sm input {
+        height: var(--input-number-input-height-sm);
+    }
+
+    &.ant-input-number-lg input {
+        height: var(--input-number-input-height-lg);
+    }
+
+    .@{ant-prefix}-input-number input {
         height: var(--input-number-input-height);
     }
 
