fix: tag增加两种颜色
Change-Id: I07970463b200d0bcfefaaf5cf0bbcafb2792d230

--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -33,7 +33,7 @@
         }
     }
 
-    &.@{ant-prefix}-tag-blue {
+    &.@{osui-tag-class-prefix}-blue {
         color: var(--tag-blue-font-color);
         background: var(--tag-blue-bg-color);
 
@@ -43,7 +43,7 @@
         }
     }
 
-    &.@{ant-prefix}-tag-green {
+    &.@{osui-tag-class-prefix}-green {
         color: var(--tag-green-font-color);
         background: var(--tag-green-bg-color);
 
@@ -53,7 +53,7 @@
         }
     }
 
-    &.@{ant-prefix}-tag-red {
+    &.@{osui-tag-class-prefix}-red {
         color: var(--tag-red-font-color);
         background: var(--tag-red-bg-color);
 
@@ -63,7 +63,7 @@
         }
     }
 
-    &.@{ant-prefix}-tag-yellow {
+    &.@{osui-tag-class-prefix}-yellow {
         color: var(--tag-yellow-font-color);
         background: var(--tag-yellow-bg-color);
 
@@ -73,9 +73,14 @@
         }
     }
 
-    &.@{ant-prefix}-tag-purple {
-        color: var(--tag-font-color);
+    &.@{osui-tag-class-prefix}-purple {
+        color: var(--color-purple-6);
         background: var(--tag-purple-color);
+    }
+
+    &.@{osui-tag-class-prefix}-gray {
+        color: var(--color-gray-9);
+        background: var(--color-gray-3) !important;
     }
 }
 
