fix: popover 关闭icon调整
Change-Id: I2d4c92b06e41cb5c378af4e74e0194169e1ce458

--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -26,4 +26,11 @@
         padding: var(--popover-inner-content-padding);
         color: var(--theme-text-color);
     }
+
+    &-close-icon {
+        float: right;
+        height: 14px;
+        color: var(--theme-icon-color);
+        cursor: pointer;
+    }
 }
