fix: 调整tree, tree-select
Change-Id: I39954a8df3a2d89866adbd17f1bab46f7654dabf

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -291,9 +291,9 @@
 @steps-icon-font-size: 14px;
 @steps-icon-size: 28px;
 
-// Tree
+// Tree, TreeSelect
 // ---
-@tree-node-hover-bg: var(--color-brand-1);
+@tree-node-hover-bg: var(--color-gray-3);
 @tree-node-selected-bg: var(--theme-component-bg);
 
 // Badge
