fix: checkbox导出类型增加, table修复bug, tree修复unselectable
Change-Id: I3cc70e3b5ddf26accc45d0829b0d2bf204904a38

--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -43,6 +43,11 @@
             }
         }
     }
+    // 修复sticky时升高z-index，不然箭头会被挡住
+    .@{ant-prefix}-table-selection-column.@{ant-prefix}-table-cell-fix-left,
+    .@{ant-prefix}-table-selection-column.@{ant-prefix}-table-cell-fix-right {
+        z-index: 3;
+    }
 
     // ===== 以下用class来patch，因为侵入性比较强 ======
     &-icloud {
