fix: time-picker 调整
Change-Id: Ib876cf21a20c239e70dd28b5a5f82f3b33543390

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -46,7 +46,7 @@
 
 // The background colors for active and hover states for things like
 // list items or table cells.
-@item-hover-bg: var(--theme-secondary-color-hover);
+@item-hover-bg: var(--item-hover-bg);
 @item-active-bg: var(--theme-secondary-color-hover);
 
 // LINK
@@ -269,6 +269,7 @@
 
 // DatePicker
 @picker-basic-cell-active-with-range-color: var(--color-brand-1);
+@picker-basic-cell-hover-with-range-color: var(--color-brand-2);
 
 // Slider
 // ---
