--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -22,7 +22,7 @@
 @body-background: var(--theme-body-bg);
 // Base background color for most components
 @component-background: var(--theme-component-bg);
-@font-family: "Helvetica Neue", "Helvetica", "Arial", "PingFangSC-Regular", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", "sans-serif";
+@font-family: var(--theme-font-family);
 @code-family: Consolas, Menlo, Courier, monospace;
 @heading-color: var(--theme-heading-color);
 @text-color: var(--theme-text-color);
