--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -86,6 +86,12 @@
             top: 6px;
         }
     }
+
+    // 对齐Antd label
+    .@{ant-prefix}-form-item-label > label:not(.@{ant-prefix}-form-item-required)::before {
+        margin-left: 8px;
+        content: ' ';
+    }
 }
 
 @keyframes osui-icon-spin {
