fix: tree 箭头调整位置
Change-Id: Id446cd68d05bf9df3f20d71e7d50a2f7707938a7

--- a/packages/ui/tree/src/index.less
+++ b/packages/ui/tree/src/index.less
@@ -45,8 +45,15 @@
         }
     }
     // == 调整 switcher icon ==
+    span.@{ant-prefix}-tree-switcher .@{ant-prefix}-tree-switcher-icon,
+    span.@{ant-prefix}-tree-switcher .@{ant-prefix}-select-tree-switcher-icon {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+
     .@{ant-prefix}-tree-switcher {
-        top: 3px;
         width: var(--tree-switcher-width);
     }
 
