--- a/packages/ui/page-header/src/index.less
+++ b/packages/ui/page-header/src/index.less
@@ -4,4 +4,18 @@
     &-no-padding {
         padding: 0;
     }
+
+    .@{ant-prefix}-page-header-heading-title {
+        font-weight: var(--page-header-title-font-weight);
+        font-size: var(--page-header-title-font-size);
+    }
+
+    .@{ant-prefix}-page-header-back-button {
+        font-weight: var(--page-header-title-font-weight);
+        font-size: var(--page-header-title-font-size);
+
+        .osui-icon {
+            height: var(--page-header-title-font-size);
+        }
+    }
 }
