fix: table header icon位置, 和展开时不对齐的问题
Change-Id: I5d41254c6239fdd42671b8cb36d3edc17f56b138

--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -69,9 +69,32 @@
 
         .@{ant-prefix}-table-cell-with-append {
             .osui-icon {
+                position: relative;
+                left: -2px;
                 float: left;
                 margin-right: 4px;
             }
         }
+    }
+
+    // Table Header 里面的icon贴着文字
+    .@{ant-prefix}-table-filter-column,
+    .@{ant-prefix}-table-column-sorters {
+        justify-content: initial;
+    }
+
+    .@{ant-prefix}-table-column-title {
+        flex: 0;
+    }
+
+    .@{ant-prefix}-table-column-sorter,
+    .@{ant-prefix}-table-filter-trigger {
+        flex: 1;
+        flex-grow: 0;
+        margin-left: 8px;
+    }
+
+    .@{ant-prefix}-table-filter-trigger:hover {
+        background: transparent;
     }
 }
