--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -83,7 +83,7 @@
     }
 
     .@{ant-prefix}-table-column-title {
-        flex: 0;
+        flex: initial;
     }
 
     .@{ant-prefix}-table-column-sorter,
