--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,13 +1,20 @@
 @osui-empty-class-prefix: osui-empty;
 
-.@{osui-empty-class-prefix},
+.@{osui-empty-class-prefix} {
+    .@{ant-prefix}-empty-image {
+        height: 87px;
+        margin-bottom: 10px;
+    }
+}
+
 .@{osui-empty-class-prefix}-large {
     .@{ant-prefix}-empty-image {
+        height: auto;
         margin-bottom: 20px;
 
         svg {
-            min-width: 120px;
-            max-width: 180px;
+            min-width: 180px;
+            max-width: 360px;
             height: 100%;
         }
     }
@@ -17,9 +24,5 @@
     .@{ant-prefix}-empty-image {
         height: 50px;
         margin-bottom: 10px;
-
-        svg {
-            width: 70px;
-        }
     }
 }
