fix: 修复empty文字的颜色
Change-Id: I7d618d79c231e28b31d9c57cc6a3d6920d840a37

--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,6 +1,10 @@
 @osui-empty-class-prefix: osui-empty;
 
 .@{osui-empty-class-prefix} {
+    .@{ant-prefix}-empty-description {
+        color: var(--color-gray-9);
+    }
+
     .@{ant-prefix}-empty-image {
         height: 87px;
         margin-bottom: 10px;
