--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -88,7 +88,7 @@
     }
 
     // 对齐Antd label
-    .@{ant-prefix}-form-item-label > label:not(.@{ant-prefix}-form-item-required)::before {
+    .has-required-item .@{ant-prefix}-form-item-label > label:not(.@{ant-prefix}-form-item-required)::before {
         margin-left: 8px;
         content: ' ';
     }
