fix: antd form alert的结构有调整,现在不是string[]了,可以是reactnode了,格式传入时控制
Change-Id: I0aad5b6f4e3b549514944f51496b47b20628b759

--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -4,11 +4,6 @@
 .@{osui-form-class-prefix} {
     .@{ant-prefix}-form-item-explain {
         font-size: 12px;
-
-        [role="alert"] {
-            display: flex;
-            align-items: center;
-        }
     }
 
     .@{ant-prefix}-form-item-has-error .@{ant-prefix}-form-item-explain {
@@ -88,7 +83,7 @@
     }
 
     // 对齐Antd label
-    .has-required-item .@{ant-prefix}-form-item-label > label:not(.@{ant-prefix}-form-item-required)::before {
+    &.has-required-item .@{ant-prefix}-form-item-label > label:not(.@{ant-prefix}-form-item-required)::before {
         margin-left: 8px;
         content: ' ';
     }
