fix: 修复button danger primary时字体颜色问题
Change-Id: Ieda966ec8e245a5fd9cf9ee73e8fb786c3bc433f

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -160,6 +160,7 @@
     }
 
     .@{osui-button-class-prefix}.@{ant-prefix}-btn-primary.@{osui-button-class-prefix}-face-@{face} {
+        color: ~"var(--theme-component-bg)";
         background-color: ~"var(--theme-@{face}-color)";
         border-color: ~"var(--theme-@{face}-color)";
 
