fix: 调整modal的关闭icon位置
Change-Id: Ic5f3f3f7df6607feb2a7f72e73774073cc6c1ce9

--- a/packages/ui/collapse/src/patch.less
+++ b/packages/ui/collapse/src/patch.less
@@ -1,4 +1,4 @@
-// fix 4.16.6 osui升级大版本之后，antd依赖>4.16.6可以删除以下适配
+// FIXME 4.16.6 osui升级大版本之后，antd依赖>4.16.6可以删除以下适配
 
 .osui-collapse {
     .ant-collapse-item .ant-collapse-header .icon-wrapper {
