--- a/packages/ui/table/src/patch.less
+++ b/packages/ui/table/src/patch.less
@@ -1,4 +1,4 @@
-// fix 4.16.6 osui升级大版本之后，antd依赖>4.16.6可以删除以下适配
+// FIXME 4.16.6 osui升级大版本之后，antd依赖>4.16.6可以删除以下适配
 
 .@{ant-prefix}-table-thead > tr > th:not(:last-child):not(.@{ant-prefix}-table-selection-column):not(.@{ant-prefix}-table-row-expand-icon-cell):not([colspan])::before {
     position: absolute;
