fix: Input调整allowClear的时候+showCount结合的样式
Change-Id: If0e47fc26607e227ab392840e033e4d14aa37adc

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -175,6 +175,7 @@
     &-counter {
         position: relative;
         right: 21px;
+        z-index: 1;
         display: inline-block;
         color: var(--color-gray-7);
         white-space: nowrap;
