--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -49,6 +49,21 @@
             }
         }
     }
+
+    &-full-screen {
+        width: 100vw !important;
+        max-width: 100vw;
+
+        .@{ant-prefix}-modal-content{
+            height: 100vh;
+            width: 100vw;
+        }
+
+        .@{ant-prefix}-modal-body{
+            height: ~"calc(100vh - 60px)";
+            max-height: ~"calc(100vh - 60px)";
+        }
+    }
 }
 
 .@{osui-modal-class-prefix}-confirm {
