--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -197,7 +197,7 @@
 .@{ant-prefix}-btn.@{ant-prefix}-btn-text,
 .@{ant-prefix}-btn.@{ant-prefix}-btn-link {
     &.@{osui-button-class-prefix}.@{osui-button-class-prefix}-face-error {
-        background: var(--theme-component-bg);
+        background: transparent;
     }
 }
 
