fix: select disable 选中时样式不对的问题
Change-Id: Ib592551f69b440a1e20db9e9cf05765e43e6c5c7

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -157,7 +157,7 @@
     }
 
     // 以下调整选中时的icon，外面可以进行替换
-    .@{ant-prefix}-select-item-option-selected:not(.@{ant-prefix}-select-item-option-disabled) {
+    .@{ant-prefix}-select-item-option-selected {
         .@{ant-prefix}-select-item-option-state {
             position: absolute;
             top: 17%;
@@ -168,6 +168,7 @@
     .@{osui-select-class-prefix}-check-icon {
         width: var(--select-check-icon-size);
         height: var(--select-check-icon-size);
+        border-radius: var(--theme-border-radius-base);
     }
 }
 
