fix: 修复button在tooltip里面样式没有传过去的问题
Change-Id: I47b73291b926bf04c6bb5fae6cdd6a3e21085b68

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -78,7 +78,8 @@
 
 // antd 移除了default的样式，需要直接应用到ant-btn上，需要放到gengerate上面，确保有type的能覆盖它
 /* stylelint-disable no-duplicate-selectors */
-.@{osui-button-class-prefix}.@{ant-prefix}-btn {
+.@{osui-button-class-prefix}.@{ant-prefix}-btn,
+.@{osui-button-class-prefix} .@{ant-prefix}-btn {
     .button-color-mixin(
         ~'var(--btn-default-color)';
         ~'var(--btn-default-bg)';
