fix: 增加icloud-ui的暗模式

--- a/packages/ui-theme/icloud-theme/patches/less-functions-overrides.less
+++ b/packages/ui-theme/icloud-theme/patches/less-functions-overrides.less
@@ -37,7 +37,11 @@
     }
 
     .color(@color) {
-      return: @color;
+        return: @color;
+    }
+
+    .fadein(@color, @percentage: 100%) {
+        return: @color;
     }
 }
 // === endof less mixin overrides ===
