fix: 公有云主题, 颜色,icon调整
Change-Id: I3717414fe69ea711e93f30f69fff0872adb9d233

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -14,8 +14,8 @@
 
 @line-height-base: 1.5;
 
-@border-radius-base: 0;
-@border-radius-sm: 0;
+@border-radius-base: var(--border-radius-3);
+@border-radius-sm: var(--border-radius-2);
 
 @height-base: 30px;
 @height-lg: 40px;
