--- a/packages/ui/button/stories/index.less
+++ b/packages/ui/button/stories/index.less
@@ -1,31 +1,23 @@
 .icon-strong {
     color: var(--theme-primary-color);
 
-    &:hover {
-        color: var(--theme-primary-color-hover);
-    }
-
-    &:active {
-        color: var(--theme-primary-color-active);
-    }
-
-    &[disabled] {
+    &.osui-button-icon-spinner {
         color: var(--color-brand-3);
     }
 }
 
 .text-link {
-    color: var(--theme-primary-color);
+    color: var(--btn-link-color);
 }
 
 .text-link:hover {
-    color: var(--theme-primary-color-hover);
+    color: var(--btn-link-hover-color);
 }
 
 .text-link:active {
-    color: var(--theme-primary-color-active);
+    color: var(--btn-link-active-color);
 }
 
 .text-link:disabled {
-    color: var(--color-brand-3);
+    color: var(--btn-link-disable-color);
 }
