--- a/packages/ui/docs/icloud/stories/button/index.less
+++ b/packages/ui/docs/icloud/stories/button/index.less
@@ -1,23 +1,23 @@
 .icon-strong {
     color: var(--theme-primary-color);
 
-    &:hover {
-        color: var(--theme-primary-color-hover);
-    }
-
-    &:active {
-        color: var(--theme-primary-color-active);
+    &.osui-button-icon-spinner {
+        color: var(--color-brand-3);
     }
 }
 
 .text-link {
-    color: var(--theme-text-color);
+    color: var(--btn-link-color);
 }
 
 .text-link:hover {
-    color: var(--link-hover-color);
+    color: var(--btn-link-hover-color);
 }
 
 .text-link:active {
-    color: var(--link-active-color);
+    color: var(--btn-link-active-color);
+}
+
+.text-link:disabled {
+    color: var(--btn-link-disable-color);
 }
