--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -7,7 +7,7 @@
 
     // placeholder
     .@{ant-prefix}-select-selection-placeholder {
-        color: var(--color-gray-7);
+        color: var(--theme-placeholder-color);
         opacity: 1;
     }
 
