--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -103,38 +103,32 @@
 .@{osui-checkbox-class-prefix},
 .@{osui-checkbox-class-prefix}-group .@{ant-prefix}-checkbox-group-item {
     .@{ant-checkbox}-indeterminate .@{ant-checkbox}-inner {
-        background-color: var(--checkbox-checked-bg);
-        border-color: var(--checkbox-checked-border-color);
-
-        &::after {
-            width: 10px;
-            height: 2px;
-            background-color: var(--color-gray-1);
-        }
+        background-color: var(--theme-component-bg);
+        border-color: var(--theme-primary-color);
     }
 
     // hover
     &.@{ant-checkbox}-wrapper:hover .@{ant-checkbox}-indeterminate .@{ant-checkbox}-inner,
     .@{ant-checkbox}-indeterminate:hover .@{ant-checkbox}-inner {
-        background-color: var(--checkbox-checked-hover-bg);
+        background-color: var(--theme-component-bg);
         border-color: var(--checkbox-checked-hover-border-color);
     }
 
     // focus时的效果
     .@{ant-checkbox}-indeterminate .@{ant-checkbox}-input:focus + .@{ant-checkbox}-inner {
-        background-color: var(--checkbox-checked-focus-bg);
-        border-color: var(--checkbox-checked-border-color);
+        background-color: var(--theme-component-bg);
+        border-color: var(--theme-primary-color);
         box-shadow: var(--checkbox-checked-focus-box-shadow);
     }
 
     &.@{ant-checkbox}-wrapper:hover .@{ant-checkbox}-indeterminate.@{ant-checkbox}-disabled .@{ant-checkbox}-inner,
     .@{ant-checkbox}-disabled:hover.@{ant-checkbox}-indeterminate .@{ant-checkbox}-inner,
     .@{ant-checkbox}-indeterminate.@{ant-checkbox}-disabled .@{ant-checkbox}-inner {
-        background-color: var(--checkbox-checked-disabled-bg);
+        background-color: var(--theme-component-bg);
         border-color: var(--checkbox-checked-disabled-border-color) !important;
 
         &::after {
-            border-color: var(--checkbox-checked-disabled-border-color);
+            background-color: var(--checkbox-checked-disabled-border-color);
         }
     }
 }
