fix: 修复select tag的icon样式
Change-Id: I6cb1b6272b1de6582299c6545acf97b22d4bdded

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -114,6 +114,11 @@
             opacity: 1 !important; // hover时显示clearIcon，符合antd的效果，也符合osui需要效果
         }
     }
+
+    .@{osui-select-class-prefix}-remove-icon {
+        width: 12px;
+        height: 12px;
+    }
 }
 
 .@{osui-select-class-prefix}.@{ant-prefix}-select-multiple {
