fix: popover box-shadow的问题
Change-Id: I005da0cef1cf3f822e93abbfee1054e4a1f53b07

--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -5,6 +5,10 @@
     font-size: var(--popover-font-size);
     line-height: var(--popover-line-height);
 
+    .@{ant-prefix}-popover-inner {
+        box-shadow: 0 0 8px var(--shadow-color);
+    }
+
     .@{ant-prefix}-popover-content {
         max-width: 400px;
         word-break: break-all;
